# jtech-tui

./: README.md  pyproject.toml
docs/: how-it-works.md
jtech_tui/: __init__.py  api.py  app.py  config.py  editor.py  styles.tcss
jtech_tui/screens/: __init__.py  composer.py  leaderboard.py  login.py  main.py  smart_footer.py  thread.py  user_profile.py
